--- a/style.css
+++ b/style.css
@@ -47,3 +47,30 @@
     top: 340px;
     left: 200px;
 }
+@media only screen and (max-width: 400px){
+    .cahitbaslik{
+        color: white;
+        font-size: 22px;
+        margin-top: 10px;
+    }
+    .cahityazi{
+        color: white;
+        font-size: 22px;
+        line-height: 30px;
+        margin-top: -120px;
+        margin-left: -170px;
+        
+    }
+    .cahitbaslik1{
+        color: white;
+        font-size: 22px;
+        margin-left: 150px;
+        margin-top: 200px;
+    }
+    .cahityazi1{
+        color: white;
+        font-size: 22px;
+        line-height: 30px;
+        margin-top: -10px;
+        margin-left: 20px;
+}
