--- a/style.css
+++ b/style.css
@@ -61,17 +61,30 @@
         margin-left: -170px;
         
     }
-    .cahitbaslik1{
+    .ravenchibaslik1{
         color: white;
         font-size: 22px;
         margin-left: 150px;
         margin-top: 200px;
     }
-    .cahityazi1{
+    .ravenchiyazi1{
         color: white;
         font-size: 22px;
         line-height: 30px;
         margin-top: -10px;
         margin-left: 20px;
 }
+    .castielbaslik2{
+        color: white;
+        font-size: 22px;
+        margin-left: 150px;
+        margin-top: 100px;
+    }
+    .castielyazi2{
+        color: white;
+        font-size: 22px;
+        line-height: 30px;
+        margin-top: 10px;
+        margin-left: 20px;
+    }
 }
