--- a/style.css
+++ b/style.css
@@ -87,4 +87,17 @@
         margin-top: 10px;
         margin-left: 20px;
     }
+    .burakbaslik1{
+        color: white;
+        font-size: 22px;
+        margin-left: 150px;
+        margin-top: 100px;
+    }
+    .burakyazi1{
+        color: white;
+        font-size: 22px;
+        line-height: 30px;
+        margin-top: 10px;
+        margin-left: 20px;
+    }
 }
