--- a/style.css
+++ b/style.css
@@ -100,4 +100,17 @@
         margin-top: 10px;
         margin-left: 20px;
     }
+    .sladebaslik1{
+        color: white;
+        font-size: 22px;
+        margin-left: 150px;
+        margin-top: 100px;
+    }
+    .sladeyazi1{
+        color: white;
+        font-size: 22px;
+        line-height: 30px;
+        margin-top: 10px;
+        margin-left: 20px;
+    }
 }
