--- a/style.css
+++ b/style.css
@@ -45,7 +45,59 @@
     line-height: 30px;
     position: absolute;
     top: 340px;
-    left: 200px;
+    left: 130px;
+}
+.ravenchibaslik1{
+    color: white;
+    font-size: 22px;
+    margin-left: 150px;
+    margin-top: 200px;
+}
+.ravenchiyazi1{
+    color: white;
+    font-size: 22px;
+    line-height: 30px;
+    margin-top: -10px;
+    margin-left: 120px;
+}
+.castielbaslik2{
+    color: white;
+    font-size: 22px;
+    margin-left: 150px;
+    margin-top: 100px;
+}
+.castielyazi2{
+    color: white;
+    font-size: 22px;
+    line-height: 30px;
+    margin-top: 10px;
+    margin-left: 120px;
+}
+.burakbaslik1{
+    color: white;
+    font-size: 22px;
+    margin-left: 150px;
+    margin-top: 100px;
+}
+.burakyazi1{
+    color: white;
+    font-size: 22px;
+    line-height: 30px;
+    margin-top: 10px;
+    margin-left: 120px;
+}
+.sladebaslik1{
+    color: white;
+    font-size: 22px;
+    margin-left: 150px;
+    margin-top: 100px;
+}
+.sladeyazi1{
+    color: white;
+    font-size: 22px;
+    line-height: 30px;
+    margin-top: 10px;
+    margin-left: 120px;
 }
 @media only screen and (max-width: 418px){
     .cahitbaslik{
