--- a/style.css
+++ b/style.css
@@ -7,9 +7,17 @@
     font-family: sans-serif;
     font-style: italic;
     position: absolute;
-    top: 80px;
-    left: 1150px;
+    top: 60px;
+    left: 1300px;
     font-size: 24px;
+    border: 3px solid;
+    padding: 10px;
+    border-radius: 10px;
+    transition: 0.5s;
+}
+.dgsgeridon:hover{
+    color: black;
+    background-color: white;
 }
 .mart9{
     color: white;
@@ -24,8 +32,8 @@
     text-decoration: none;
     position: absolute;
     font-size: 23px;
-    right: 738px;
-    top: 20px;
+    right: 668px;
+    top: 50px;
 }
 
 .cahitbaslik{
@@ -99,6 +107,63 @@
     margin-top: 10px;
     margin-left: 120px;
 }
+.ozelbuton{
+    width: 150px;
+    height: 50px;
+    color: white;
+    background-color: black;
+    border: 2px solid;
+    border-radius: 10px;
+    position: absolute;
+    top: 70px;
+    right: 100px;
+    transition: 0.5s;
+}
+.ozelbuton:hover{
+    color: black;
+    background-color: white;
+}
+.ozelbuton:active{
+    transform: scale(0.5);
+}
+.sifrediv{
+    border: 3px solid white;
+    border-radius: 10px;
+    width: 500px;
+    height: 300px;
+    position: relative;
+    left: 500px;
+}
+.sifre{
+    width: 200px;
+    height: 20px;
+    border-radius: 10px;
+    position: absolute;
+    top: 100px;
+    left: 150px;
+}
+.ipucu{
+    color: white;
+    font-size: 17px;
+    font-style: italic;
+    position: absolute;
+    top: 60px;
+    left: 220px;
+}
+.accept{
+    color: black;
+    background-color: white;
+    border-radius: 10px;
+    height: 40px;
+    position: absolute;
+    top: 150px;
+    left: 150px;
+    width: 210px;
+    font-size: 18px;
+    font-weight: bold;
+    font-family: sans-serif;
+    font-style: italic;
+}
 @media only screen and (max-width: 418px){
     .cahitbaslik{
         color: white;
@@ -164,5 +229,28 @@
         line-height: 30px;
         margin-top: 10px;
         margin-left: 20px;
+    }
+    .ozelbuton{
+        position: absolute;
+        left: 270px;
+
+        height: 40px;
+        width: 100px;
+    }
+    .dgsgeridon{
+        color: white;
+        position: absolute;
+        top: 60px;
+        left: 290px;
+        height: 20px;
+        text-align: center;
+        padding: 5px;
+        width: 80px;
+        font-size: 17px;
+        border: 2px solid;
+        border-radius: 10px;
+    }
+    .ozelbuton:active{
+        transform: scale(0.5);
     }
 }
