--- a/style.css
+++ b/style.css
@@ -107,6 +107,19 @@
     margin-top: 10px;
     margin-left: 120px;
 }
+.rakinbaslik1{
+    color: white;
+    font-size: 22px;
+    margin-left: 150px;
+    margin-top: 100px;
+}
+.rakinyazi1{
+    color: white;
+    font-size: 22px;
+    line-height: 30px;
+    margin-top: 10px;
+    margin-left: 120px;
+}
 .ozelbuton{
     width: 150px;
     height: 50px;
@@ -224,6 +237,19 @@
         margin-top: 100px;
     }
     .sladeyazi1{
+        color: white;
+        font-size: 22px;
+        line-height: 30px;
+        margin-top: 10px;
+        margin-left: 20px;
+    }
+    .rakinbaslik1{
+        color: white;
+        font-size: 22px;
+        margin-left: 150px;
+        margin-top: 100px;
+    }
+    .rakinyazi1{
         color: white;
         font-size: 22px;
         line-height: 30px;
