--- a/style.css
+++ b/style.css
@@ -120,6 +120,19 @@
     margin-top: 10px;
     margin-left: 120px;
 }
+.furkanbaslik1{
+    color: white;
+    font-size: 22px;
+    margin-left: 150px;
+    margin-top: 100px;
+}
+.furkanyazi1{
+    color: white;
+    font-size: 22px;
+    line-height: 30px;
+    margin-top: 10px;
+    margin-left: 120px;
+}
 .ozelbuton{
     width: 150px;
     height: 50px;
@@ -256,10 +269,23 @@
         margin-top: 10px;
         margin-left: 20px;
     }
+    .furkanbaslik1{
+        color: white;
+        font-size: 22px;
+        margin-left: 150px;
+        margin-top: 100px;
+    }
+    .furkanyazi1{
+        color: white;
+        font-size: 22px;
+        line-height: 30px;
+        margin-top: 10px;
+        margin-left: 20px;
+    }
     .ozelbuton{
         position: absolute;
-        left: 270px;
-
+        right: 20.5%;
+        top: 65px;
         height: 40px;
         width: 100px;
     }
