--- a/style.css
+++ b/style.css
@@ -146,6 +146,32 @@
     margin-top: 10px;
     margin-left: 120px;
 }
+.silverhoodbaslik1{
+    color: white;
+    font-size: 22px;
+    margin-left: 150px;
+    margin-top: 100px;
+}
+.silverhoodyazi1{
+    color: white;
+    font-size: 22px;
+    line-height: 30px;
+    margin-top: 10px;
+    margin-left: 120px;
+}
+.miabaslik1{
+    color: white;
+    font-size: 22px;
+    margin-left: 150px;
+    margin-top: 100px;
+}
+.miayazi1{
+    color: white;
+    font-size: 22px;
+    line-height: 30px;
+    margin-top: 10px;
+    margin-left: 120px;
+}
 .ozelbuton{
     width: 150px;
     height: 50px;
@@ -302,6 +328,32 @@
         margin-top: 100px;
     }
     .holdredyazi1{
+        color: white;
+        font-size: 22px;
+        line-height: 30px;
+        margin-top: 10px;
+        margin-left: 20px;
+    }
+    .silverhoodbaslik1{
+        color: white;
+        font-size: 22px;
+        margin-left: 150px;
+        margin-top: 100px;
+    }
+    .silverhoodyazi1{
+        color: white;
+        font-size: 22px;
+        line-height: 30px;
+        margin-top: 10px;
+        margin-left: 20px;
+    }
+    .miabaslik1{
+        color: white;
+        font-size: 22px;
+        margin-left: 150px;
+        margin-top: 100px;
+    }
+    .miayazi1{
         color: white;
         font-size: 22px;
         line-height: 30px;
