--- a/style.css
+++ b/style.css
@@ -172,6 +172,19 @@
     margin-top: 10px;
     margin-left: 120px;
 }
+.soulwaxbaslik{
+    color: white;
+    font-size: 22px;
+    margin-left: 150px;
+    margin-top: 100px;
+}
+.soulwaxyazi{
+    color: white;
+    font-size: 22px;
+    line-height: 30px;
+    margin-top: 10px;
+    margin-left: 120px;
+}
 .ozelbuton{
     width: 150px;
     height: 50px;
@@ -229,7 +242,7 @@
     font-family: sans-serif;
     font-style: italic;
 }
-@media only screen and (max-width: 418px){
+@media only screen and (max-width: 576px){
     .cahitbaslik{
         color: white;
         font-size: 22px;
@@ -354,6 +367,19 @@
         margin-top: 100px;
     }
     .miayazi1{
+        color: white;
+        font-size: 22px;
+        line-height: 30px;
+        margin-top: 10px;
+        margin-left: 20px;
+    }
+    .soulwaxbaslik{
+        color: white;
+        font-size: 22px;
+        margin-left: 150px;
+        margin-top: 100px;
+    }
+    .soulwaxyazi{
         color: white;
         font-size: 22px;
         line-height: 30px;
